@@ -1,7 +1,7 @@
 BrailleRHome =
     function() {
       if (interactive()) {
-        browseURL("http://R-Resources.massey.ac.nz/BrailleR/")
+        browseURL("https://R-Resources.massey.ac.nz/BrailleR/")
       } else {
         warning("This function is meant for use in interactive mode only.\n")
       }
@@ -11,9 +11,9 @@ BrailleRHome =
 LURN = function(BlindVersion = getOption("BrailleR.VI")) {
          if (interactive()) {
            if (BlindVersion) {
-             browseURL("http://R-Resources.massey.ac.nz/LURNBlind/front.html")
+             browseURL("https://R-Resources.massey.ac.nz/LURNBlind/front.html")
            } else {
-             browseURL("http://R-Resources.massey.ac.nz/LURN/front.html")
+             browseURL("https://R-Resources.massey.ac.nz/LURN/front.html")
            }
          } else {
            warning("This function is meant for use in interactive mode only.\n")
