@@ -1,0 +1,4 @@
+
+nNonMissing = function(x){
+    length(na.omit(x)) # because length() alone would include NAs
+}
