@@ -4,4 +4,3 @@ DataName.poly2 <- lm(ResponseName ~ poly(PredictorName, 2, raw=TRUE), data = Dat
 DataName.poly3 <- lm(ResponseName ~ poly(PredictorName, 3, raw=TRUE), data = DataName)
 DataName.poly4 <- lm(ResponseName ~ poly(PredictorName, 4, raw=TRUE), data = DataName)
 anova(DataName.poly1, DataName.poly2, DataName.poly3, DataName.poly4)
-
