@@ -3,4 +3,3 @@ DataName.aov1 = aov(ResponseName ~ FactorName, data=DataName)
 DataName.aov2 = aov(ResponseName ~ FactorName+Covariate, data=DataName)
 DataName.aov3 = aov(ResponseName ~ FactorName*Covariate, data=DataName)
 anova(DataName.aov1, DataName.aov2, DataName.aov3)
-
