@@ -1,0 +1,3 @@
+nNonMissing = function(x){
+    length(na.omit(x)) # because length() alone would include NAs
+}
